Double clicking the view toggle fullscreen

BUG:289843