lib/documentview/documentview.h
@@ -179,7 +179,6 @@ Q_SIGNALS:
 protected:
     void paint(QPainter* painter, const QStyleOptionGraphicsItem* option, QWidget* widget = 0);
 
-    void mouseDoubleClickEvent(QGraphicsSceneMouseEvent* event);
     void wheelEvent(QGraphicsSceneWheelEvent* event);
     void contextMenuEvent(QGraphicsSceneContextMenuEvent* event);
     bool sceneEventFilter(QGraphicsItem*, QEvent*);
